--- a/index.html
+++ b/index.html
@@ -12210,7 +12210,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background-color: var(--bgc-color);
+  background-color: white;
   font-family: var(--font);
   display: flex;
   justify-content: center;
